--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Color Game</title>
     <style>
         * {
             margin: 0;
@@ -11,26 +11,53 @@
             box-sizing: border-box;
             border-radius: 10px;
         }
+        body {
+            font-family: Arial, sans-serif;
+            /* background-color: #F06060; */
+            color: white;
+        }
         #container {
             width: 100%;
-            height: 100dvh;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #F06060;
-            
+            text-align: center;
+            background-image: linear-gradient(135deg, rgba(38, 74, 66, 0.8), rgba(24, 132, 105, 0.8));
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
-        .word{
+        .word {
             height: 80px;
-            font-size: 30px;
+            font-size: 28px;
+            margin: 10px 0;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
         }
-
-        #change{
-            width: 150px;
-            height: 100px;
-            font-size: 40px;
+        #change {
+            width: 160px;
+            height: 60px;
+            font-size: 24px;
             cursor: pointer;
+            background-color: #FF9F00;
+            border: none;
+            color: white;
+            transition: background-color 0.3s, transform 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        #change:hover {
+            background-color: #3a44b0;
+            transform: scale(1.05);
+        }
+        @media (max-width: 600px) {
+            .word {
+                font-size: 20px;
+            }
+            #change {
+                width: 140px;
+                height: 50px;
+                font-size: 20px;
+            }
         }
     </style>
 </head>
@@ -44,9 +71,9 @@
     </section>
     
     <script>
-        const change=document.querySelector('#change');
-        change.addEventListener('click',function(){
-            window.location.href='js-colorGame-ultimate.html';
+        const change = document.querySelector('#change');
+        change.addEventListener('click', function() {
+            window.location.href = 'js-colorGame-ultimate.html';
         });
     </script>
 </body>
